fixed dashboard table fixed delete studies color fixed input alignment in advance report

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2305,3 +2305,7 @@ margin-top: 8px !important;
   margin-top: auto;
   margin-bottom: auto;
 }
+
+label[for="study_description"]{
+  margin-top: 9px;
+}
